Bug 1599862 - hide macos gpu migration on WR behind a pref. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D55395

--HG--
extra : moz-landing-system : lando