widget/cocoa/nsChildView.mm
@@ -1707,7 +1707,7 @@ bool nsChildView::PreRender(WidgetRenderingContext* aContext) {
   // composition is done, thus keeping the GL context locked forever.
   mViewTearDownLock.Lock();
 
-  if (aContext->mGL) {
+  if (aContext->mGL && gfxPlatform::CanMigrateMacGPUs()) {
     GLContextCGL::Cast(aContext->mGL)->MigrateToActiveGPU();
   }
 
